tests/fixtures/pass/move-nested-assets/.chous
in assets:
  move *.css to css
