tests/fixtures/fail/move-nested/.chous
# Test: Violate move rule in nested directory
in src:
  move *.log to logs
